# Journaler

./: Cargo.toml  README.md
journal-lib/: Cargo.toml
journal-lib/src/: errors.rs  lib.rs  service.rs  views.rs
journal-server/: Cargo.toml
journal-server/src/: builders.rs  definition.rs  events.rs  fs_service.rs  lib.rs  main.rs  project.rs
journal-ui/: Cargo.toml
journal-ui/src/: app.rs  main.rs
