[package]
name = "journal-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"]}
serde_json = "1.0.120"
serde_yaml = "0.9.34"