[package]
name = "journal-ui"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
journal-lib = { path = "../journal-lib" }
journal-server = { path = "../journal-server" }

getrandom = { version = "0.2.11", features = ["js"] }
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"]}
serde_json = "1.0.120"
serde_yaml = "0.9.34"
directories-next = "2.0.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
